--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,19 +1,25 @@
 @font-face {
     font-family: 'Inter';
     font-style: normal;
-    src: url(../../fonts/Inter/static/Inter-Regular.ttf);
+    src: url(../../vendor/fonts/Inter/static/Inter-Regular.ttf);
 }
 
 @font-face {
     font-family: 'Inter';
     font-weight: bold;
-    src: url(../../fonts/Inter/static/Inter-Bold.ttf);
+    src: url(../../vendor/fonts/Inter/static/Inter-Bold.ttf);
 }
 
-.page{
+@font-face {
+    font-family: 'Inter';
+    font-weight: 900;
+    src: url(../../vendor/fonts/Inter/static/Inter-Black.ttf);
+}
+
+.page {
  max-width: 1600px;
  margin: 0 auto;
  font-family: 'Inter';
  background-color:#2A2C2F;
  color: #FFFFFF;
-}
+ }
