--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,9 +2,10 @@
     list-style-type: none;
     font-weight: 400;
     font-size: 16px;
-    line-height: 163%;
+    line-height: 18px;
     margin: 33px 0 0;
     padding-left: 0;
+    min-height: 90px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
