--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
 .header{
-    max-width: 100%;
+    max-width: 1600px;
     max-height: 52px;
+    margin: 0 auto;
     padding: 28px 48px 0;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
