--- a/pages/index.css
+++ b/pages/index.css
@@ -27,3 +27,7 @@
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__container-paragraph/place__container-paragraph.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__container-link/footer__container-link.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
