--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -23,6 +23,6 @@
 @media screen and (max-width:424px) {
     .places{
         width: 100%;
-        padding-top: 64x;
+        padding-top: 64px;
     } 
 }
