--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,6 +7,8 @@
     margin: 0 auto;
     position: relative;
     text-align: center;
+    text-decoration: none;
+    color: white;
 }
 
 @media screen and (max-width: 767px) {
