--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -23,10 +23,10 @@
     background-repeat: no-repeat; 
     background-color: #2A2C2F;
     opacity: .8;
+    transition: opacity .4s ease;
 }
 
 .cover:hover::before {
-    transform: opacity .4s;
     opacity: .3;   
 }
 
