--- a/blocks/lead/__image-map/lead__image-map.css
+++ b/blocks/lead/__image-map/lead__image-map.css
@@ -1,25 +1,6 @@
 .lead__image-map{
-    width: calc(100% - 49px);
-    margin: 90px auto auto;
-}
-
-@media screen and (min-width: 1024px) and (max-width: 1278px) {
-    .lead__image-map{
-    width: calc(100% - 44px);
-    margin-top: 85px;
-    }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .lead__image-map{
-    width: calc(100% - 36px);
-    margin-top: 70px;
-    }
-}
-
-@media screen and (max-width: 767px) {
-    .lead__image-map{
-    width: calc(100% - 15px);
-    margin-top: 29.3px;
-    }
+    width: 95.22%;
+    position: absolute;
+    top: 14.66%;
+    left: 2.36%;
 }
