--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,30 +1,20 @@
 .lead__image{
+    width: 100%;
+    margin-top: 64px;
+    padding-bottom: 62.5%;
     background-image: url(../../../images/kalegin-michail-179870-unsplash.jpg);
     background-size: cover;
-    margin: 64px auto 0;
-    width: 100%;
-    height: 615px;
-    display: flex;
+    position: relative;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1278px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
     .lead__image{
-       height: 580px;
-       margin: 56px auto 0;
+        margin-top: 56px; 
     }
-   }
-@media screen and (min-width:768px) and (max-width: 1023px) {
-    .lead__image{
-        width: 100vw;
-        height: calc(100vw * 0.625);
-        margin: 56px auto 0;
-    } 
 }
 
 @media screen and (max-width: 767px) {
     .lead__image{
-        width: 100vw;
-        height: calc(100vw * 0.625);
-        margin: 40px auto 0;
+        margin-top: 40px;
     } 
 }
