--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,7 @@
 .cover {
     width: calc(100% - 96px);
-    max-width: 1440px;
-    height: 740px;
+    max-width: 1184px;
+    min-height: 740px;
     display: flex;
     flex-direction: column;
     row-gap: 32px;
@@ -9,6 +9,8 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    text-decoration: none;
+    color:white;
 }
 
 .cover::before {
@@ -22,23 +24,30 @@
     right: 0;
     background-repeat: no-repeat;
     background-color: #2A2C2F;
-    opacity: .8;
+    opacity: 0.3;
     transition: opacity .4s ease;
 }
 
 .cover:hover::before {
-    opacity: .3;   
+    opacity: 0.8;   
 }
 
 @media screen and (max-width: 1024px) {
     .cover{
         width: 100%;
-        height: 62.5vw;
+        min-height: 62.5vw;
     } 
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
+    .cover{
+        margin-top: 90px;
+    } 
+}
+
+@media screen and (max-width: 452px) {
     .cover{
         row-gap: 16px;
+        margin-top: 66px;
     }
 }
