--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,6 +5,11 @@
     color: white;
     text-decoration: none;
     margin: 0;
+    transition: opacity .4s ease;
+}
+
+.footer__link:hover {
+ opacity: .8;
 }
 
 @media screen and (max-width: 452px) {
