--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -7,10 +7,11 @@
     font-weight: 400;
     line-height: 28px;
     text-decoration: none;
+    transition: opacity .4s ease;
 }
 
-.header__lang-link:first-child {
-    text-decoration: underline;
+.header__lang-link:hover {
+ opacity: .8;
 }
 
 @media screen and (max-width: 320px) {
