--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,11 +1,13 @@
 .lead__caption {
     align-self: flex-start;
-    margin: 8px 0 0;
-    max-width: 158px;
+    margin: 8px auto 0;
+    min-width: 158px;
+    max-width: 984px;
     font-weight: 400;
     font-size: 10px;
     line-height: 14px;
     letter-spacing: 1.5px;
+    text-transform: uppercase;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
