--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,5 +1,5 @@
 .lead__subtitle {
-    margin: 32px auto 64px;
+    margin: 32px auto 0;
     max-width: 640px;
     font-size: 30px;
     font-weight: 400;
