--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,5 @@
 .photo-grid{
-    max-width: 1440px;
+    max-width: 1280px;
     margin: 0 auto;
     padding-top: 92px;
     display: grid;
@@ -19,6 +19,7 @@
     .photo-grid {
     grid-template-columns: repeat(auto-fit, minmax(min-content, 352px));
     gap: 16px;
+    padding-top: 88px;
     }
 }
 
@@ -26,5 +27,6 @@
     .photo-grid {
     grid-template-columns: repeat(auto-fit, minmax(min-content, 288px));
     gap: 12px;
+    padding-top: 64px;
     }
 }
