--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,53 +1,14 @@
 .cover {
-    width: calc(100% - 96px);
+    width:calc(100% - 96px);
     max-width: 1184px;
-    min-height: 740px;
-    display: flex;
-    flex-direction: column;
-    row-gap: 32px;
-    margin: 92px auto 0;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    text-decoration: none;
-    color:white;
-}
-
-.cover::before {
-    content:"";
+    margin: 0 auto;
     background-image: url(../../images/__background-cover.jpg);
     background-size: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
     background-repeat: no-repeat;
-    background-color: #2A2C2F;
-    opacity: 0.3;
-    transition: opacity .4s ease;
 }
 
-.cover:hover::before {
-    opacity: 0.8;   
-}
-
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .cover{
         width: 100%;
-        min-height: 62.5vw;
     } 
-}
-
-@media screen and (max-width: 768px) {
-    .cover{
-        margin-top: 90px;
-    } 
-}
-
-@media screen and (max-width: 452px) {
-    .cover{
-        row-gap: 16px;
-        margin-top: 66px;
-    }
 }
